--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -3,7 +3,6 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:pe="http://primefaces.org/ui/extensions"
                 template="/view/templ/templ.xhtml">
 
     <ui:param name="_canClose" value="#{_canClose == null ? true : _canClose}"/> 
@@ -26,6 +25,9 @@
             <p:panel header="#{_bean.getFormHeader()}" rendered="#{_bean != null}" styleClass="ui-grid-col-12 ui-draggable without-spaces" style="height: 100%;" >
                 <f:facet name="actions">
                     <p:commandLink type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
+                                   immediate="true"
+                                   rendered="#{_bean.getSourceBeanId() != null}"
+                                   disabled="#{!_canClose}"
                                    onclick="if (itemChange == 1){
                                         onChangeItem();
                                     } 
