--- a/escom-bpm-web/src/main/webapp/view/common/file-uppload.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/file-uppload.xhtml
@@ -20,7 +20,7 @@
                        process="@this"
                        mode="advanced" auto="true"
                        dragDropSupport="true"
-                       label="#{''.concat(bundle.SelectFileAndCreateDoc).concat(' ').concat(bundle.InFolder).concat(' =').concat(_bean.currentItem.name).concat('= ')}"
+                       label="#{''.concat(bundle.SelectFileAndCreateDoc).concat(' ').concat(bundle.InFolder).concat(' ').concat(_bean.currentItem.name).concat(' ')}"
                        cancelLabel="#{bundle.Cancel}"
                        uploadLabel="#{bundle.SaveFiles}"
                        fileUploadListener="#{_bean.onUploadFile}" 
