--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -6,7 +6,7 @@
 
     <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirmDLG" width="470" height="195" modal="true" resizable="false"
               maximizable="false" closeOnEscape="true">
-        <h:form>
+        <h:form style="font-size: 100%;">
             <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">                
                 <h:panelGrid columns="2" styleClass="ui-grid-col-12 without-spaces">
                     <p:graphicImage id="itemIcon" value="/resources/images/info.jpg"/>
