--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -25,14 +25,13 @@
             <p:panel header="#{_bean.getFormHeader()}" rendered="#{_bean != null}" styleClass="ui-grid-col-12 ui-draggable without-spaces" style="height: 100%;" >
                 <f:facet name="actions">
                     <p:commandLink type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
-                                   immediate="true"
                                    rendered="#{_bean.getSourceBeanId() != null}"
                                    disabled="#{!_canClose}"
+                                   actionListener="#{_bean.onCancelItemSave()}" 
                                    onclick="if (itemChange == 1){
                                         onChangeItem();
                                     } 
-                                    sendFormSize(); 
-                                    document.getElementById('mainFRM:btnClose').click();">
+                                    sendFormSize();">
                         <h:outputText styleClass="ui-icon ui-icon-closethick" />
                     </p:commandLink>
                 </f:facet>                                
@@ -90,8 +89,7 @@
             </p:panel>
 
             <ui:insert name="form_scripts"/>
-            
-            <p:commandButton id="btnClose" actionListener="#{_bean.onCancelItemSave()}" style="display: none;"/>            
+                                  
             <ui:include src="/view/common/confirm-dlg.xhtml"/>
             <p:remoteCommand name="formSize" actionListener="#{_bean.onFormSize()}" />
             <p:remoteCommand name="onChangeItem" immediate="true" actionListener="#{_bean.onItemChange()}" oncomplete="return itemChange = 0;"/> 
