--- a/escom-bpm-web/src/main/webapp/view/common/dict-info.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-info.xhtml
@@ -18,14 +18,14 @@
         <p:outputLabel value="#{bundle.DateCreate}:" />                            
         <p:inputText value="#{_bean.editedItem.dateCreate}" readonly="true"
                      styleClass="ui-grid-col-2"
-                     onkeypress="checkEsc(#{_bean.cancelBtnName});">
+                     onkeypress="checkEsc();">
             <f:convertDateTime parent="dd.mm.yy"/>
         </p:inputText>
 
         <p:outputLabel value="#{bundle.DateChange}:" />
         <p:inputText value="#{_bean.editedItem.dateChange}" readonly="true"
                      styleClass="ui-grid-col-2"
-                     onkeypress="checkEsc(#{_bean.cancelBtnName});">
+                     onkeypress="checkEsc();">
             <f:convertDateTime parent="dd.mm.yy"/>
         </p:inputText>
 
@@ -48,7 +48,7 @@
         <p:outputLabel value="Id:" />
         <p:inputText value="#{_bean.editedItem.id}" readonly="true"
                      styleClass="ui-grid-col-2"
-                     onkeypress="checkEsc(#{_bean.cancelBtnName});">
+                     onkeypress="checkEsc();">
         </p:inputText>
         
         <p:selectBooleanCheckbox value="#{_bean.editedItem.actual}" id="cbActual"                                         
