--- a/escom-bpm-web/src/main/webapp/view/companies/company-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-card.xhtml
@@ -21,7 +21,7 @@
                 <p:outputLabel value="#{bundle.Name}" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
                              styleClass="ui-grid-col-12"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onkeypress="checkEsc();"
                              onchange="return itemChange = 1;"
                              disabled="#{_bean.isReadOnly()}"
                              required="#{param['isRequired'] == 'true'}"
@@ -30,7 +30,7 @@
 
                 <p:outputLabel value="#{bundle.Code}" />
                 <p:inputText id="companyCode" value="#{_bean.editedItem.code}" 
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onkeypress="checkEsc();"
                              disabled="#{_bean.isReadOnly()}"
                              onchange="return itemChange = 1;">
                     <f:validateLength for="companyCode" maximum="2"/>
