--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -20,7 +20,7 @@
                                          title="#{bundle.BriefDescriptionDocument}"
                                          styleClass="ui-grid-col-12"
                                          rows="1" autoResize="true" 
-                                         onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                         onkeypress="checkEsc();"
                                          disabled="#{_bean.isReadOnly()}"
                                          onchange="return itemChange = 1;"
                                          required="#{param['isRequired'] == 'true'}" 
@@ -70,7 +70,7 @@
                             <div class="ui-inputgroup">
                                 <p:inputText value="#{_item.regNumber}" id="number"
                                             title="#{bundle.RegistredDocNumber}"
-                                            onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                            onkeypress="checkEsc();"
                                             rendered="#{_item.docType == null or _item.docType.numerator == null}"
                                             disabled="#{_bean.isReadOnly()}"
                                             onchange="return itemChange = 1;"
@@ -101,7 +101,7 @@
                         <p:outputLabel value="#{bundle.DateDoc}:" indicateRequired="true"/>
                         <p:calendar id="dateDoc" value="#{_bean.editedItem.dateDoc}"  title="#{bundle.DateRegistredDoc}"
                                     styleClass="ui-grid-col-12"
-                                    onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                    onkeypress="checkEsc();"
                                     disabled="#{_bean.isReadOnly()}"
                                     onselect="return itemChange = 1;"
                                     required="#{param['isRequired'] == 'true'}" 
