--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-card.xhtml
@@ -16,7 +16,7 @@
                 <p:outputLabel value="#{bundle.Name}:" indicateRequired="true" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
                              styleClass="ui-grid-col-12"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onkeypress="checkEsc();"
                              disabled="#{_bean.isReadOnly() or!_bean.isHaveRightEdit()}"
                              onchange="return itemChange = 1;"
                              required="#{param['isRequired'] == 'true'}"
@@ -25,7 +25,7 @@
                 <p:outputLabel value="#{bundle.Code}:" />
                 <p:inputText id="docTypeCode" value="#{_bean.editedItem.code}" 
                              title="#{bundle.StringArbitrary}"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onkeypress="checkEsc();"
                              disabled="#{_bean.isReadOnly() or!_bean.isHaveRightEdit()}"
                              onchange="return itemChange = 1;">                    
                     <f:validateLength for="docTypeCode" maximum="3"/>
