--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
@@ -11,7 +11,7 @@
                 <p:outputLabel value="#{bundle.Name}" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
                              styleClass="ui-grid-col-12"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onkeypress="checkEsc();"
                              disabled="#{_bean.isReadOnly() or!_bean.isHaveRightEdit()}"
                              onchange="return itemChange = 1;"
                              required="#{param['isRequired'] == 'true'}"
