--- a/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
@@ -22,7 +22,7 @@
 
                 <p:outputLabel value="#{bundle.Header}"/>
                 <p:inputText value="#{_bean.editedItem.name}" id="nameItem" styleClass="ui-grid-col-12"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onkeypress="checkEsc();"
                              readonly="#{!_bean.isHaveRightEdit()}"
                              onchange="return itemChange = 1;"
                              disabled="#{_bean.isReadOnly()}"
@@ -34,12 +34,12 @@
                 <h:panelGroup styleClass="ui-grid-col-12">
                     <p:inputText value="#{_bean.editedItem.getParentNumber()}" rendered="#{not empty _bean.editedItem.parent}"
                                  styleClass="ui-grid-col-2"
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                 onkeypress="checkEsc();"
                                  readonly="true" disabled="true">
                     </p:inputText>
                     <p:inputText value="#{_bean.editedItem.folderNumber}"
                                  styleClass="ui-grid-col-1"
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                 onkeypress="checkEsc();"
                                  readonly="#{!_bean.isHaveRightEdit()}"
                                  onchange="return itemChange = 1;"
                                  maxlength="4"
