--- a/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-card.xhtml
@@ -11,7 +11,7 @@
             <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank" columnClasses="ui-grid-col-12" >
                 <p:outputLabel value="#{bundle.ShortName}" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                 onkeypress="checkEsc();"
                                  onchange="return itemChange = 1;"
                                  styleClass="ui-grid-col-12"
                                  disabled="#{_bean.isReadOnly()}"
@@ -20,7 +20,7 @@
                 
                 <p:outputLabel value="#{bundle.FullName}" />
                 <p:inputTextarea id="fullName" value="#{_bean.editedItem.fullName}" 
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                 onkeypress="checkEsc();"
                                  rows="1" autoResize="true"
                                  disabled="#{_bean.isReadOnly()}"
                                  onchange="return itemChange = 1;"
