--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -4,9 +4,8 @@
         xmlns:p="http://primefaces.org/ui"
         xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirmDLG" width="470" height="195" modal="true" resizable="false"
-              maximizable="false" closeOnEscape="true">
-        <h:form style="font-size: 100%;">
+    <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirmDLG" width="470" height="195" modal="true" resizable="false">
+        <h:form style="font-size: 110%;">
             <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">                
                 <h:panelGrid columns="2" styleClass="ui-grid-col-12 without-spaces">
                     <p:graphicImage id="itemIcon" value="/resources/images/info.jpg"/>
