--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -5,37 +5,37 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"                
       xmlns:p="http://primefaces.org/ui" 
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-        
+
     <h:head>               
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="Content-Style-Type" content="text/css" />  
         <meta name="viewport" content="width=device-width" />   
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />            
-        
+
         <meta http-equiv="Cache-Control" content="no-store" />
         <meta http-equiv="Cache-Control" content="no-cache" />
         <meta http-equiv="Cache-Control" content="must-revalidate" />
         <meta http-equiv="Expires" content="Mon, 8 Aug 2020 10:00:00 GMT" />   
         <meta http-equiv="Pragma" content="no-cache" />        
-            
+
         <title>
             <ui:insert name="title"/>
         </title> 
-                
+
         <link rel="shortcut icon" href="#{resource['icon/done.png']}" type="image/png"/>
         <h:outputStylesheet library="css" name="em_style1.css"/>
         <f:view locale="#{sessionBean.locale}"></f:view>
     </h:head>
-    
+
     <ui:insert name="preRendered"/>
-    
+
     <h:body> 
-        
+
         <ui:insert name="customStyleCSS"/>
         <ui:insert name="systems"/>
         <ui:insert name="body" /> 
         <ui:insert name="dialogs"/>
-            
+
         <style>
             .ui-tabs-left>.ui-tabs-panels{
                 float:left !important;
@@ -63,58 +63,64 @@
             .ui-accordion .ui-accordion-content {
                 padding: 0px !important
             }
-          
+
         </style>
-        
-        <script type="text/javascript">  
-            
-                function checkEsc(componentName) {
-                    if (event.keyCode === 27) {
-                        document.getElementById(componentName).focus();
-                        return;
-                    }
-                }
 
-                var itemChange = 0;
-        
-                function sendFormSize(){
-                    var width = window.innerWidth;
-                    var height = window.innerHeight;
+        <script type="text/javascript">
+            $(function () {
+                $(':input').bind('keydown', 'esc', function () {
+                    checkEsc();
+                    return false;
+                });
+            });
 
-                    formSize([
-                        {name : 'width',  value : width},
-                        {name : 'height', value : height}
-                    ]);
+            function checkEsc() {
+                if (event.keyCode === 27) {
+                    document.getElementById('mainFRM:btnClose').click();
+                    return;
                 }
-            
-                PrimeFaces.locales ['ru'] = {
-                    closeText: 'Закрыть',
-                    prevText: 'Назад',
-                    nextText: 'Вперёд',
-                    currentText: 'Сегодня',
-                    monthNames: ['Январь', 'Февраль', 'Март', 'Апрель', 'Май', 'Июнь', 'Июль', 'Август', 'Сентябрь', 'Октябрь', 'Ноябрь', 'Декабрь'],
-                    monthNamesShort: ['Янв', 'Фев', 'Мар', 'Апр', 'Май', 'Июн', 'Июл', 'Авг', 'Сен', 'Окт', 'Ноя', 'Дек'],
-                    dayNames: ['Воскресенье', 'Понедельник', 'Вторник', 'Среда', 'Четверг', 'Пятница', 'Суббота'],
-                    dayNamesShort: ['Вс.', 'Пн.', 'Вт.', 'Ср.', 'Чт.', 'Пт.', 'Сб.'],
-                    dayNamesMin: ['Вс', 'Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб'],
-                    weekHeader: 'Неделя',
-                    firstDay: 1,
-                    isRTL: false,
-                    showMonthAfterYear: false,
-                    yearSuffix: '',
-                    timeOnlyTitle: 'Только время',
-                    timeText: 'Время',
-                    hourText: 'Час',
-                    minuteText: 'Минута',
-                    secondText: 'Секунда',
-                    ampm: false,
-                    month: 'Месяц',
-                    week: 'неделя',
-                    day: 'День',
-                    allDayText: 'Весь день'
-                };
-            </script>
-               
+            }
+
+            var itemChange = 0;
+
+            function sendFormSize() {
+                var width = window.innerWidth;
+                var height = window.innerHeight;
+
+                formSize([
+                    {name: 'width', value: width},
+                    {name: 'height', value: height}
+                ]);
+            }
+
+            PrimeFaces.locales ['ru'] = {
+                closeText: 'Закрыть',
+                prevText: 'Назад',
+                nextText: 'Вперёд',
+                currentText: 'Сегодня',
+                monthNames: ['Январь', 'Февраль', 'Март', 'Апрель', 'Май', 'Июнь', 'Июль', 'Август', 'Сентябрь', 'Октябрь', 'Ноябрь', 'Декабрь'],
+                monthNamesShort: ['Янв', 'Фев', 'Мар', 'Апр', 'Май', 'Июн', 'Июл', 'Авг', 'Сен', 'Окт', 'Ноя', 'Дек'],
+                dayNames: ['Воскресенье', 'Понедельник', 'Вторник', 'Среда', 'Четверг', 'Пятница', 'Суббота'],
+                dayNamesShort: ['Вс.', 'Пн.', 'Вт.', 'Ср.', 'Чт.', 'Пт.', 'Сб.'],
+                dayNamesMin: ['Вс', 'Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб'],
+                weekHeader: 'Неделя',
+                firstDay: 1,
+                isRTL: false,
+                showMonthAfterYear: false,
+                yearSuffix: '',
+                timeOnlyTitle: 'Только время',
+                timeText: 'Время',
+                hourText: 'Час',
+                minuteText: 'Минута',
+                secondText: 'Секунда',
+                ampm: false,
+                month: 'Месяц',
+                week: 'неделя',
+                day: 'День',
+                allDayText: 'Весь день'
+            };
+        </script>
+
         <ui:insert name="customJavaScript"/>                
 
         <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false"
