--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -16,7 +16,7 @@
                         <p:inputText id="nameItem" value="#{_bean.editedItem.secondName}" 
                                      styleClass="ui-grid-col-12"
                                      disabled="#{_bean.isReadOnly()}"
-                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onkeypress="checkEsc();"
                                      required="#{param['isRequired'] == 'true'}"
                                      requiredMessage="#{bundle.Field} [#{bundle.SecondName}] #{bundle.MustBeFilled}"
                                      onchange="return itemChange = 1;">
@@ -26,7 +26,7 @@
                         <p:outputLabel value="#{bundle.FirstName}" indicateRequired="true"/>
                         <p:inputText id="firstName" value="#{_bean.editedItem.firstName}"
                                      styleClass="ui-grid-col-12"
-                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onkeypress="checkEsc();"
                                      onchange="return itemChange = 1;"
                                      disabled="#{_bean.isReadOnly()}"
                                      required="#{param['isRequired'] == 'true'}"
@@ -38,7 +38,7 @@
                         <p:inputText id="lastName" value="#{_bean.editedItem.lastName}"
                                      disabled="#{_bean.isReadOnly()}"
                                      styleClass="ui-grid-col-12"
-                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onkeypress="checkEsc();"
                                      onchange="return itemChange = 1;">
                             <p:ajax event="change" listener="#{_bean.makeName()}" update="visbleName" />
                         </p:inputText>
@@ -51,7 +51,7 @@
                                      styleClass="ui-grid-col-12"
                                      required="#{param['isRequired'] == 'true'}"                                         
                                      requiredMessage="#{bundle.Field} [#{bundle.VisibleName}] #{bundle.MustBeFilled}"
-                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onkeypress="checkEsc();"
                                      onchange="return itemChange = 1;">
                         </p:inputText>
                         <p:commandButton value="#{bundle.Generate}" title="#{bundle.MakeName}"
@@ -68,7 +68,7 @@
                             <p:inputText id="email" value="#{_bean.editedItem.email}"
                                          styleClass="ui-grid-col-12"
                                          disabled="#{_bean.isReadOnly()}"
-                                         onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                         onkeypress="checkEsc();"
                                          maxlength="1024"
                                          onchange="return itemChange = 1;">
                                 <p:keyFilter regEx="/[a-zA-Zа-яА-Я_0-9\.\-@]/i" preventPaste="false"/>
@@ -86,7 +86,7 @@
                                      disabled="#{_bean.isReadOnly()}"
                                      mask="+9 (999) 999-9999" styleClass="ui-grid-col-12"
                                      valueChangeListener="#{_bean.onChangePhone}"
-                                     onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                     onkeypress="checkEsc();"
                                      onchange="return itemChange = 1;"/>
                     </p:panelGrid>
                 </p:panelGrid>
@@ -120,7 +120,7 @@
                     <p:inputText id="login" value="#{_bean.editedItem.login}"
                                  disabled="#{_bean.isReadOnly()}"
                                  required="#{param['isRequired'] == 'true'}"
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                 onkeypress="checkEsc();"
                                  onchange="return itemChange = 1;">
                     </p:inputText>
                     <p:spacer />
@@ -138,7 +138,7 @@
                              onchange="return itemChange = 1;"
                              required="#{param['isRequired'] == 'true'}"
                              valueChangeListener="#{userCardBean.onChangePassword}"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});">
+                             onkeypress="checkEsc();">
                 </p:inputText>
 
                 <p:selectBooleanCheckbox value="#{_bean.editedItem.needChangePwl}"
@@ -163,7 +163,7 @@
                 <p:inputMask id="mobile" value="#{_bean.editedItem.mobilePhone}"
                              disabled="#{_bean.isReadOnly()}"
                              mask="+9 (999) 999-9999"
-                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onkeypress="checkEsc();"
                              onchange="return itemChange = 1;"/>
 
             </p:panelGrid>
