--- a/escom-bpm-web/src/main/webapp/view/sys/activate.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/activate.xhtml
@@ -54,8 +54,11 @@
 
     <ui:define name="body">
         <h:form id="activateFRM">
+            <p:defaultCommand target="activateFRM:btnLogin" />
+            <p:focus context="activateFRM:mainPanel" for="activateFRM:licenceNumber"/>
+            
             <p:panel styleClass="panelLogin" >
-                <p:messages id="messages" showDetail="true" closable="true" >
+                <p:messages id="messages" closable="true" >
                     <p:autoUpdate />
                 </p:messages>
 
@@ -85,8 +88,8 @@
                     </p:panelGrid>
                     
                     <p:panelGrid layout="grid" columns="1" rendered="#{applicationBean.licence == null}" styleClass="ui-panelgrid-blank">
-                        <p:outputLabel value="#{bundle.LicenceNumber}:" />
-                        <p:inputMask value="#{activateAppBean.licNumber}"
+                        <p:outputLabel value="#{bundle.LicenceNumber}:" indicateRequired="true" />
+                        <p:inputMask id="licenceNumber" value="#{activateAppBean.licNumber}"
                                      mask="999-999-999.9999"
                                      required="true" requiredMessage="#{bundle.Field} [#{bundle.LicenceNumber}] #{bundle.MustBeFilled}"
                                      styleClass="ui-grid-col-9"/>
@@ -96,6 +99,7 @@
                         <p:spacer/>
                         <p:commandButton id="btnLogin" value="#{bundle.Activate}" title="#{bundle.ActivateLicense}"
                                          actionListener="#{activateAppBean.onActivate()}"
+                                         update="activateFRM"
                                          onstart="PF('statusDialog').show();"
                                          oncomplete="PF('statusDialog').hide();"/>
                     </p:panelGrid>
