--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -17,9 +17,17 @@
         <p:importConstants type="com.maxfill.dictionary.DictStates" var="DictStates" />  
         
         <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" onkeypress="checkEsc();">
-            <p:hotkey bind="esc" id="hotskey" immediate="true" onstart="checkEsc();">
-            </p:hotkey>
+            <p:hotkey bind="esc" id="hotskey" immediate="true" onstart="checkEsc();"/>            
 
+            <script type="text/javascript">
+                $(function () {
+                    $(':input').bind('keydown', 'esc', function () {
+                        checkEsc();
+                        return false;
+                    });
+                });
+            </script>
+            
             <p:panel header="#{_bean.getFormHeader()}" rendered="#{_bean != null}" styleClass="ui-grid-col-12 ui-draggable without-spaces" style="height: 100%;" >
                 <f:facet name="actions">
                     <p:commandLink id="btnClose" type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
@@ -59,7 +67,10 @@
                                     <p:menuButton value="#{bundle.Actions}" icon="ui-icon-gear">
                                         <ui:insert name="menuActions" />  
                                         <p:separator />
-                                        <p:menuitem value="#{bundle.ManualBook}" icon="ui-icon-help" rendered="#{_isShowHelp}" actionListener="#{sessionBean.onViewHelp()}"/>
+                                        <p:menuitem value="#{bundle.ManualBook}" icon="ui-icon-help" rendered="#{_isShowHelp}" 
+                                                    onstart="PF('statusDialog').show()"
+                                                    oncomplete="PF('statusDialog').hide();"
+                                                    actionListener="#{sessionBean.onViewHelp()}"/>
                                     </p:menuButton>
                                 </f:facet>
                             </p:toolbar>  
