--- a/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
@@ -110,7 +110,7 @@
                             update="mainFRM:westFRM mainFRM:centerFRM"
                             actionListener="#{_bean.onMoveContentToTrash(item)}"
                             oncomplete="initDND()">
-                    <p:confirm header="#{bundle.Move}" message="#{bundle.ConfirmMoveToTrash}" icon="ui-icon-alert" />
+                    <p:confirm header="#{bundle.MoveToTrash}" message="#{bundle.ConfirmMoveToTrash}" icon="ui-icon-alert" />
                 </p:menuitem>
 
                 <p:separator/>
