--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
@@ -16,7 +16,7 @@
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('StaffSelector')}"/>
     <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('OrgStructureExplorer')}"/>
-    
+    <ui:param name="_lbGroupName"    value="#{bundle.Structure}" />
     <ui:param name="_showAuthor"     value="#{false}"/>
     <ui:param name="_showDateCreate" value="#{false}"/>
     <ui:param name="_showDateChange" value="#{true}"/>
@@ -81,5 +81,12 @@
         </h:panelGroup>
     </ui:define>
     
+    <ui:define name="centerFormFooter">
+        <h:panelGroup rendered="#{!_bean.isTrashSelected()}">
+            <p:panel header="" styleClass="ui-grid-col-12" rendered="#{_bean.treeSelectedNode == null}">
+                <p:outputLabel value="#{''.concat(bundle.OrganizationOrDivisionNotSelected).concat('. ').concat(bundle.ForCreateObjectNeedSelectGroup)}"/>
+            </p:panel>
+        </h:panelGroup>        
+    </ui:define>
+    
 </ui:composition>
-
