--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -16,7 +16,7 @@
 
     <ui:define name="centerFormContent">   
 
-        <p:panelGrid columns="1" layout="grid" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12" styleClass="panelLogin ui-panelgrid-blank">            
+        <p:panelGrid columns="1" layout="grid" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">            
             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
                 <p:graphicImage name="/images/escom_logo.jpg"  /> 
                 <h:panelGroup styleClass="ui-grid-col-12">
