--- a/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
@@ -5,19 +5,19 @@
                 template="/view/templ/templ-explorer.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">    
     
-    <ui:param name="_bean"       value="#{explorerTreeBean}" />
-    <ui:param name="_detailBean" value="#{partnersBean}" />
-    <ui:param name="_treeBean"   value="#{partnersGroupsBean}" /> 
+    <ui:param name="_bean"       value="#{explorerTreeBean}"/>
+    <ui:param name="_detailBean" value="#{partnersBean}"/>
+    <ui:param name="_treeBean"   value="#{partnersGroupsBean}"/> 
     
     <ui:param name="_showAuthor"     value="#{true}"/>
     <ui:param name="_showDateCreate" value="#{false}"/>
     <ui:param name="_showDateChange" value="#{true}"/>    
     
-    <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
-    <ui:param name="_CreateItemLabel" value="#{bundle.CreatePartner}" />
-        
-    <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('PartnerSelector')}"/>
-    <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('Partners')}"/>
+    <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}"/>
+    <ui:param name="_CreateItemLabel"  value="#{bundle.CreatePartner}"/>
+    <ui:param name="_lbGroupName"      value="#{bundle.GroupsPartners}"/>
+    <ui:param name="_selectorHeader"   value="#{_bean.getLabelFromBundle('PartnerSelector')}"/>
+    <ui:param name="_explorerHeader"   value="#{_bean.getLabelFromBundle('Partners')}"/>
     
     <!-- специфичные поля таблицы обозревателя Detail -->
     <ui:define name="specDetailColumns">
